# winres-edit

./: Cargo.toml  README.md
src/: error.rs  id.rs  lib.rs  resources.rs  result.rs  utils.rs  version.rs
