[package]
name = "winres-edit"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/aspectron/winres-edit"
authors = ["Anton Yemelyanov <anton.yemelyanov@gmail.com>", "Surinder Singh Matoo Mattaur <surinder83singh@gmail.com>"]
keywords = ["windows", "resources", "icon", "version"]
categories = ["encoding","os::windows-apis","parsing"]
description = """
Load and modify windows resources in existing executables (.exe or .res)
"""

[dependencies]
thiserror = "1.0.37"
manual-serializer = "0.1.0"
derivative = "2.2.0"

[dependencies.windows]
version = "0.43.0"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System",
    "Win32_Security",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
]
